@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{547, 68}, {1036, 1102}}</string>
+	<string>{{594, 72}, {1060, 1104}}</string>
 </dict>
 </plist>
